--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
           <div class="col-12 col-md-1 mr-md-3 text-center icon-group--sticky">
             <ul class="icon-group icon-group--vertical rounded--full rounded--full justify-content-center">
 
-              <li><a href="https://t.me/portaldropio" target="_blank" class="color--primary"><i
+              <li><a href="https://t.me/aevodropnet" target="_blank" class="color--primary"><i
                     class="fab fa-telegram-plane"></i></a></li>
             </ul>
           </div>
@@ -526,7 +526,7 @@
                           style="padding: 8px 12px;border: 1px solid rgb(13 189 242);background: rgba(235,185,76,.05);color: #0dc0ff;">Withdraw</button>
 
 
-                        <a href="https://t.me/portaldropio" target="_blank"
+                        <a href="https://t.me/aevodropnet" target="_blank"
                           class="btn btn-sm btn-primary rounded-pill btn-hover-shadow d-sm-none">Telegram</a>
                       </div><br><br><br>
                       <div style=" color: black; " id="withdraw-history">
@@ -557,175 +557,175 @@
                             <tr>
                               <td>2024-02-21 17:10:47</td>
                               <td><b>700.00000000</b></td>
-                              <td>0x4Ea5...d63B</td> <!-- Skrócony adres Ethereum -->
+                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
                               <td><b>Reviewed,<br> distribute after presale completed</b></td>
                             </tr>
                             <tr>
                               <td>2024-02-21 21:26:06</td>
                               <td><b>700.00000000</b></td>
-                              <td>0x4Ea5...d63B</td> <!-- Skrócony adres Ethereum -->
+                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
                               <td><b>Reviewed,<br> distribute after presale completed</b></td>
                             </tr>
                             <tr>
                               <td>2024-02-21 23:05:12</td>
                               <td><b>700.00000000</b></td>
-                              <td>0x4Ea5...d63B</td> <!-- Skrócony adres Ethereum -->
+                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
                               <td><b>Reviewed,<br> distribute after presale completed</b></td>
                             </tr>
                             <tr>
                               <td>2024-02-22 02:50:48</td>
                               <td><b>700.00000000</b></td>
-                              <td>0x4Ea5...d63B</td> <!-- Skrócony adres Ethereum -->
+                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
                               <td><b>Reviewed,<br> distribute after presale completed</b></td>
                             </tr>
                             <tr>
                               <td>2024-02-22 07:09:39</td>
                               <td><b>700.00000000</b></td>
-                              <td>0x4Ea5...d63B</td> <!-- Skrócony adres Ethereum -->
+                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
                               <td><b>Reviewed,<br> distribute after presale completed</b></td>
                             </tr>
                             <tr>
                               <td>2024-02-22 09:06:31</td>
                               <td><b>700.00000000</b></td>
-                              <td>0x4Ea5...d63B</td> <!-- Skrócony adres Ethereum -->
+                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
                               <td><b>Reviewed,<br> distribute after presale completed</b></td>
                             </tr>
                             <tr>
                               <td>2024-02-22 10:10:52</td>
                               <td><b>700.00000000</b></td>
-                              <td>0x4Ea5...d63B</td> <!-- Skrócony adres Ethereum -->
+                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
                               <td><b>Reviewed,<br> distribute after presale completed</b></td>
                             </tr>
                             <tr>
                               <td>2024-02-22 12:20:52</td>
                               <td><b>700.00000000</b></td>
-                              <td>0x4Ea5...d63B</td> <!-- Skrócony adres Ethereum -->
+                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
                               <td><b>Reviewed,<br> distribute after presale completed</b></td>
                             </tr>
                             <tr>
                               <td>2024-02-22 15:12:59</td>
                               <td><b>700.00000000</b></td>
-                              <td>0x4Ea5...d63B</td> <!-- Skrócony adres Ethereum -->
+                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
                               <td><b>Reviewed,<br> distribute after presale completed</b></td>
                             </tr>
                             <tr>
                               <td>2024-02-22 16:51:41</td>
                               <td><b>700.00000000</b></td>
-                              <td>0x4Ea5...d63B</td> <!-- Skrócony adres Ethereum -->
+                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
                               <td><b>Reviewed,<br> distribute after presale completed</b></td>
                             </tr>
                             <tr>
                               <td>2024-02-22 22:30:48</td>
                               <td><b>700.00000000</b></td>
-                              <td>0x4Ea5...d63B</td> <!-- Skrócony adres Ethereum -->
+                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
                               <td><b>Reviewed,<br> distribute after presale completed</b></td>
                             </tr>
                             <tr>
                               <td>2024-02-23 04:22:18</td>
                               <td><b>700.00000000</b></td>
-                              <td>0x4Ea5...d63B</td> <!-- Skrócony adres Ethereum -->
+                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
                               <td><b>Reviewed,<br> distribute after presale completed</b></td>
                             </tr>
                             <tr>
                               <td>2024-02-23 07:57:18</td>
                               <td><b>700.00000000</b></td>
-                              <td>0x4Ea5...d63B</td> <!-- Skrócony adres Ethereum -->
+                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
                               <td><b>Reviewed,<br> distribute after presale completed</b></td>
                             </tr>
                             <tr>
                               <td>2024-02-23 10:44:04</td>
                               <td><b>700.00000000</b></td>
-                              <td>0x4Ea5...d63B</td> <!-- Skrócony adres Ethereum -->
+                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
                               <td><b>Reviewed,<br> distribute after presale completed</b></td>
                             </tr>
                             <tr>
                               <td>2024-02-23 12:31:40</td>
                               <td><b>700.00000000</b></td>
-                              <td>0x4Ea5...d63B</td> <!-- Skrócony adres Ethereum -->
+                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
                               <td><b>Reviewed,<br> distribute after presale completed</b></td>
                             </tr>
                             <tr>
                               <td>2024-02-23 14:32:33</td>
                               <td><b>700.00000000</b></td>
-                              <td>0x4Ea5...d63B</td> <!-- Skrócony adres Ethereum -->
+                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
                               <td><b>Reviewed,<br> distribute after presale completed</b></td>
                             </tr>
                             <tr>
                               <td>2024-02-23 15:36:19</td>
                               <td><b>700.00000000</b></td>
-                              <td>0x4Ea5...d63B</td> <!-- Skrócony adres Ethereum -->
+                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
                               <td><b>Reviewed,<br> distribute after presale completed</b></td>
                             </tr>
                             <tr>
                               <td>2024-02-23 15:54:49</td>
                               <td><b>700.00000000</b></td>
-                              <td>0x4Ea5...d63B</td> <!-- Skrócony adres Ethereum -->
+                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
                               <td><b>Reviewed,<br> distribute after presale completed</b></td>
                             </tr>
                             <tr>
                               <td>2024-02-23 16:11:23</td>
                               <td><b>700.00000000</b></td>
-                              <td>0x4Ea5...d63B</td> <!-- Skrócony adres Ethereum -->
+                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
                               <td><b>Reviewed,<br> distribute after presale completed</b></td>
                             </tr>
                             <tr>
                               <td>2024-02-23 20:09:30</td>
                               <td><b>700.00000000</b></td>
-                              <td>0x4Ea5...d63B</td> <!-- Skrócony adres Ethereum -->
+                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
                               <td><b>Reviewed,<br> distribute after presale completed</b></td>
                             </tr>
                             <tr>
                               <td>2024-02-23 22:46:22</td>
                               <td><b>900.00000000</b></td>
-                              <td>0x4Ea5...d63B</td> <!-- Skrócony adres Ethereum -->
+                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
                               <td><b>Reviewed,<br> distribute after presale completed</b></td>
                             </tr>
                             <tr>
                               <td>2024-02-24 00:27:54</td>
                               <td><b>700.00000000</b></td>
-                              <td>0x4Ea5...d63B</td> <!-- Skrócony adres Ethereum -->
+                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
                               <td><b>Reviewed,<br> distribute after presale completed</b></td>
                             </tr>
                             <tr>
                               <td>2024-02-24 03:27:52</td>
                               <td><b>700.00000000</b></td>
-                              <td>0x4Ea5...d63B</td> <!-- Skrócony adres Ethereum -->
+                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
                               <td><b>Reviewed,<br> distribute after presale completed</b></td>
                             </tr>
                             <tr>
                               <td>2024-02-24 05:06:53</td>
                               <td><b>700.00000000</b></td>
-                              <td>0x4Ea5...d63B</td> <!-- Skrócony adres Ethereum -->
+                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
                               <td><b>Reviewed,<br> distribute after presale completed</b></td>
                             </tr>
                             <tr>
                               <td>2024-02-24 06:21:06</td>
                               <td><b>700.00000000</b></td>
-                              <td>0x4Ea5...d63B</td> <!-- Skrócony adres Ethereum -->
+                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
                               <td><b>Reviewed,<br> distribute after presale completed</b></td>
                             </tr>
                             <tr>
                               <td>2024-02-24 08:43:58</td>
                               <td><b>700.00000000</b></td>
-                              <td>0x4Ea5...d63B</td> <!-- Skrócony adres Ethereum -->
+                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
                               <td><b>Reviewed,<br> distribute after presale completed</b></td>
                             </tr>
                             <tr>
                               <td>2024-02-24 09:08:16</td>
                               <td><b>700.00000000</b></td>
-                              <td>0x4Ea5...d63B</td> <!-- Skrócony adres Ethereum -->
+                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
                               <td><b>Reviewed,<br> distribute after presale completed</b></td>
                             </tr>
                             <tr>
                               <td>2024-02-24 14:29:36</td>
                               <td><b>700.00000000</b></td>
-                              <td>0x4Ea5...d63B</td> <!-- Skrócony adres Ethereum -->
+                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
                               <td><b>Reviewed,<br> distribute after presale completed</b></td>
                             </tr>
                             <tr>
                               <td>2024-02-24 17:02:14</td>
                               <td><b>700.00000000</b></td>
-                              <td>0x4Ea5...d63B</td> <!-- Skrócony adres Ethereum -->
+                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
                               <td><b>Reviewed,<br> distribute after presale completed</b></td>
                             </tr>
                           </tbody>
@@ -1081,7 +1081,7 @@
             <div class="col-12 col-lg-6 ml-lg-auto text-center text-lg-right">
               <ul
                 class="icon-group icon-rounded icon-rounded-color--gray justify-content-center justify-content-lg-end mb-2 mb-lg-2">
-                <li><a href="https://t.me/aevodropio" target="_blank" class="text-color--300"><i
+                <li><a href="https://t.me/aevodropnet" target="_blank" class="text-color--300"><i
                       class="fab fa-telegram-plane"></i></a></li>
               </ul>
               <p class="text-color--400 font-size--14">© 2024 <a href="index.html" class="text-color--400">AltLayer</a>.
