--- a/index.html
+++ b/index.html
@@ -511,13 +511,13 @@
                       </div>
                       <div class="col-3">
                         <div class="heading-h5 text-primary">
-                          <p style=" color: #0dc0ff; " id="invited-count">208 users</p>
+                          <p style=" color: #0dc0ff; " id="invited-count">0 users</p>
                         </div>
                         <div class="text-muted">Referred</div>
                       </div>
                       <div class="col-3">
                         <div class="heading-h5"><span class="text-primary">
-                            <p style=" color: #0dc0ff; " id="total-rewards">20500 AEVO</p>
+                            <p style=" color: #0dc0ff; " id="total-rewards">0 AEVO</p>
                           </span> </div>
                         <div class="text-muted">Rewards</div>
                       </div>
@@ -555,178 +555,10 @@
                           </thead>
                           <tbody id="withdraw-history-body">
                             <tr>
-                              <td>2024-02-21 17:10:47</td>
-                              <td><b>700.00000000</b></td>
-                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
-                              <td><b>Reviewed,<br> distribute after presale completed</b></td>
-                            </tr>
-                            <tr>
-                              <td>2024-02-21 21:26:06</td>
-                              <td><b>700.00000000</b></td>
-                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
-                              <td><b>Reviewed,<br> distribute after presale completed</b></td>
-                            </tr>
-                            <tr>
-                              <td>2024-02-21 23:05:12</td>
-                              <td><b>700.00000000</b></td>
-                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
-                              <td><b>Reviewed,<br> distribute after presale completed</b></td>
-                            </tr>
-                            <tr>
-                              <td>2024-02-22 02:50:48</td>
-                              <td><b>700.00000000</b></td>
-                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
-                              <td><b>Reviewed,<br> distribute after presale completed</b></td>
-                            </tr>
-                            <tr>
-                              <td>2024-02-22 07:09:39</td>
-                              <td><b>700.00000000</b></td>
-                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
-                              <td><b>Reviewed,<br> distribute after presale completed</b></td>
-                            </tr>
-                            <tr>
-                              <td>2024-02-22 09:06:31</td>
-                              <td><b>700.00000000</b></td>
-                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
-                              <td><b>Reviewed,<br> distribute after presale completed</b></td>
-                            </tr>
-                            <tr>
-                              <td>2024-02-22 10:10:52</td>
-                              <td><b>700.00000000</b></td>
-                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
-                              <td><b>Reviewed,<br> distribute after presale completed</b></td>
-                            </tr>
-                            <tr>
-                              <td>2024-02-22 12:20:52</td>
-                              <td><b>700.00000000</b></td>
-                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
-                              <td><b>Reviewed,<br> distribute after presale completed</b></td>
-                            </tr>
-                            <tr>
-                              <td>2024-02-22 15:12:59</td>
-                              <td><b>700.00000000</b></td>
-                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
-                              <td><b>Reviewed,<br> distribute after presale completed</b></td>
-                            </tr>
-                            <tr>
-                              <td>2024-02-22 16:51:41</td>
-                              <td><b>700.00000000</b></td>
-                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
-                              <td><b>Reviewed,<br> distribute after presale completed</b></td>
-                            </tr>
-                            <tr>
-                              <td>2024-02-22 22:30:48</td>
-                              <td><b>700.00000000</b></td>
-                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
-                              <td><b>Reviewed,<br> distribute after presale completed</b></td>
-                            </tr>
-                            <tr>
-                              <td>2024-02-23 04:22:18</td>
-                              <td><b>700.00000000</b></td>
-                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
-                              <td><b>Reviewed,<br> distribute after presale completed</b></td>
-                            </tr>
-                            <tr>
-                              <td>2024-02-23 07:57:18</td>
-                              <td><b>700.00000000</b></td>
-                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
-                              <td><b>Reviewed,<br> distribute after presale completed</b></td>
-                            </tr>
-                            <tr>
-                              <td>2024-02-23 10:44:04</td>
-                              <td><b>700.00000000</b></td>
-                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
-                              <td><b>Reviewed,<br> distribute after presale completed</b></td>
-                            </tr>
-                            <tr>
-                              <td>2024-02-23 12:31:40</td>
-                              <td><b>700.00000000</b></td>
-                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
-                              <td><b>Reviewed,<br> distribute after presale completed</b></td>
-                            </tr>
-                            <tr>
-                              <td>2024-02-23 14:32:33</td>
-                              <td><b>700.00000000</b></td>
-                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
-                              <td><b>Reviewed,<br> distribute after presale completed</b></td>
-                            </tr>
-                            <tr>
-                              <td>2024-02-23 15:36:19</td>
-                              <td><b>700.00000000</b></td>
-                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
-                              <td><b>Reviewed,<br> distribute after presale completed</b></td>
-                            </tr>
-                            <tr>
-                              <td>2024-02-23 15:54:49</td>
-                              <td><b>700.00000000</b></td>
-                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
-                              <td><b>Reviewed,<br> distribute after presale completed</b></td>
-                            </tr>
-                            <tr>
-                              <td>2024-02-23 16:11:23</td>
-                              <td><b>700.00000000</b></td>
-                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
-                              <td><b>Reviewed,<br> distribute after presale completed</b></td>
-                            </tr>
-                            <tr>
-                              <td>2024-02-23 20:09:30</td>
-                              <td><b>700.00000000</b></td>
-                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
-                              <td><b>Reviewed,<br> distribute after presale completed</b></td>
-                            </tr>
-                            <tr>
-                              <td>2024-02-23 22:46:22</td>
-                              <td><b>900.00000000</b></td>
-                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
-                              <td><b>Reviewed,<br> distribute after presale completed</b></td>
-                            </tr>
-                            <tr>
-                              <td>2024-02-24 00:27:54</td>
-                              <td><b>700.00000000</b></td>
-                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
-                              <td><b>Reviewed,<br> distribute after presale completed</b></td>
-                            </tr>
-                            <tr>
-                              <td>2024-02-24 03:27:52</td>
-                              <td><b>700.00000000</b></td>
-                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
-                              <td><b>Reviewed,<br> distribute after presale completed</b></td>
-                            </tr>
-                            <tr>
-                              <td>2024-02-24 05:06:53</td>
-                              <td><b>700.00000000</b></td>
-                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
-                              <td><b>Reviewed,<br> distribute after presale completed</b></td>
-                            </tr>
-                            <tr>
-                              <td>2024-02-24 06:21:06</td>
-                              <td><b>700.00000000</b></td>
-                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
-                              <td><b>Reviewed,<br> distribute after presale completed</b></td>
-                            </tr>
-                            <tr>
-                              <td>2024-02-24 08:43:58</td>
-                              <td><b>700.00000000</b></td>
-                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
-                              <td><b>Reviewed,<br> distribute after presale completed</b></td>
-                            </tr>
-                            <tr>
-                              <td>2024-02-24 09:08:16</td>
-                              <td><b>700.00000000</b></td>
-                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
-                              <td><b>Reviewed,<br> distribute after presale completed</b></td>
-                            </tr>
-                            <tr>
-                              <td>2024-02-24 14:29:36</td>
-                              <td><b>700.00000000</b></td>
-                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
-                              <td><b>Reviewed,<br> distribute after presale completed</b></td>
-                            </tr>
-                            <tr>
-                              <td>2024-02-24 17:02:14</td>
-                              <td><b>700.00000000</b></td>
-                              <td>0x5506...848A</td> <!-- Skrócony adres Ethereum -->
-                              <td><b>Reviewed,<br> distribute after presale completed</b></td>
+                              <td></td>
+                              <td><b></b></td>
+                              <td></td> <!-- Skrócony adres Ethereum -->
+                              <td><b><br></b></td>
                             </tr>
                           </tbody>
                         </table>
